welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:4: error: ';' expected but 'if' found.
  } if (a % 10 == c % 10) {
    ^